--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "netflix-gpt",
   "version": "0.1.0",
-  "homepage": "https://saisreereddy.github.io/netflix-gpt/",
+  "homepage": "https://github.com/saisreereddy/netflix-gpt/blob/main/public/index.html",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
